--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -41,6 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 .elementor-heading-title > h1,
 h1 {
   font-size: $type-headings-h1-size;
+  line-height: $type-headings-h1-line-height;
 }
 
 // -----------------------------------------
@@ -48,6 +49,7 @@ h1 {
 .elementor-heading-title > h2,
 h2 {
   font-size: $type-headings-h2-size;
+  line-height: $type-headings-h2-line-height;
 }
 
 // -----------------------------------------
@@ -55,6 +57,7 @@ h2 {
 .elementor-heading-title > h3,
 h3 {
   font-size: $type-headings-h3-size;
+  line-height: $type-headings-h3-line-height;
 }
 
 // -----------------------------------------
@@ -62,6 +65,7 @@ h3 {
 .elementor-heading-title > h4,
 h4 {
   font-size: $type-headings-h4-size;
+  line-height: $type-headings-h4-line-height;
 }
 
 // -----------------------------------------
@@ -69,6 +73,7 @@ h4 {
 .elementor-heading-title > h5,
 h5 {
   font-size: $type-headings-h5-size;
+  line-height: $type-headings-h5-line-height;
 }
 
 // -----------------------------------------
@@ -76,6 +81,7 @@ h5 {
 .elementor-heading-title > h6,
 h6 {
   font-size: $type-headings-h6-size;
+  line-height: $type-headings-h6-line-height;
 }
 
 
