--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -14,15 +14,28 @@
 // ==============================================================
 // ## Max-width and padding of the footer's .col-full class.
 .site-footer > .col-full {
+  padding: 25px;
+  @media (min-width: 1024px) { padding: $footer-wrapper-padding; }
   max-width: $footer-wrapper-max-width;
-  padding: $footer-wrapper-padding;
   margin: $footer-wrapper-margin;
+}
+
+// -----------------------------------------
+// ## Inject flex into the footer widgets.
+.site-footer .footer-widgets {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  &:before, &:after { content: none; }
 }
 
 // -----------------------------------------
 // ## Adjust the width and margins of the footer widgets per mockup.
 .footer-widgets.col-4 .block {
-  width: 15%;
+  width: auto;
+  @media (min-width: 1024px) { width: 15%; }
   margin-right: 0;
 }
 
@@ -30,8 +43,13 @@
 // ## Adjust the text alignment of the right-hand widget (widget-4 / socials)
 // as well as the container width.
 .footer-widgets.col-4 .block.footer-widget-4 {
-  width: 30%;
-  text-align: right;
+  width: 100%;
+  text-align: center;
+
+  @media (min-width: 1024px) {
+    width: 30%;
+    text-align: right;
+  }
 }
 
 
@@ -117,11 +135,24 @@
 //
 // ==============================================================
 .ilsv-footer-bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 32px;
+  @media (min-width: 768px) {
+    display: block;
+    text-align: inherit;
+    margin-bottom: 4px;
+  }
+
   // ul.menu is Wordpress' generated class for menu lists.
   & .menu {
     margin: 0;
     list-style-type: none;
-    text-align: right;
+    text-align: center;
+    @media (min-width: 768px) { text-align: right; }
 
     // li.menu-item is Wordpress' generated class for menu list items.
     & .menu-item {
@@ -132,6 +163,11 @@
       }
     }
   }
+}
+
+.ilsv-maa {
+  text-align: center;
+  @media (min-width: 1024px) { text-align: left; }
 }
 
 
@@ -157,5 +193,12 @@
 // ## Hide theme's default .site-info area; because we added a custom shortcode
 // from our Elementor Library (Footer | Footer Bar Menu) there instead.
 .site-info {
+  display: none;
+}
+
+// -----------------------------------------
+// ## Hide the theme's defailt bottom bar that was based around
+// account profiles and cart items.
+.storefront-handheld-footer-bar {
   display: none;
 }
