--- a/assets/scss/layout/_megamenu.scss
+++ b/assets/scss/layout/_megamenu.scss
@@ -42,25 +42,29 @@
 //
 // ==============================================================
 .mm-overlay {
-  content: "";
-  background-color: rgba(0,0,0,.65);
-  opacity: 0;
-  transition: 300ms ease-in-out;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  &.mm-active {
-    opacity: 1;
-    transition: 300ms ease-in-out;
-    z-index: 1;
-  }
-
-  &.mm-hidden {
-    z-index: -1;
-  }
+  display: none;
+  &.mm-hidden { z-index: -1; }
 }
+
+@media (min-width:1024px) {
+  .mm-overlay {
+    display: block;
+    content: "";
+    background-color: rgba(0,0,0,.65);
+    opacity: 0;
+    transition: 300ms ease-in-out;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    &.mm-active {
+      opacity: 1;
+      transition: 300ms ease-in-out;
+      z-index: 100;
+    }
+  } // end mm-overlay
+} // end @1024px
