--- a/assets/scss/utilities/_!module.scss
+++ b/assets/scss/utilities/_!module.scss
@@ -4,4 +4,5 @@
 // Helper utility styles for adjusting margin, padding, etc.
 // ==============================================================
 
+@import "animations";
 @import "shadows";
